Fix missing cmd

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                                 'devices': [{
                                     'id': '123'
                                 }],
-                                'execution': []
+                                'execution': [cmd]
                             }]
                         }
                     }]
