remove fitbit app because I don't have a watch anymore, remove auth, change more things to be configurable, update readme, update some icons

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><text x='-1' y='15.5'>📺</text></svg>"
-        type="image/svg+xml" />
+    <link rel="icon" href="data:image/svg+xml,<svg width='80pt' height='80pt' version='1.0' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'>
+            <g transform='translate(0 80) scale(.1 -.1)' fill='purple'>
+                <path d='m50 565v-205h350 350v205 205h-350-350v-205zm630 0v-135h-280-280v135 135h280 280v-135z' />
+                <path d='m170 295v-35h230 230v35 35h-230-230v-35z' />
+                <path d='m520 20v70h-70v70h70v70h70v-70h70v-70h-70v-70z' />
+                <path d='m130 115v-35h105 105v35 35h-105-105v-35z' />
+            </g>
+        </svg>" type="image/svg+xml" />
     <title>cecvol</title>
     <style>
         button {
