--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <title>CECvol</title>
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="manifest" href="/manifest.json">
     <style>
         h1,
         p {
